@startuml

package "UI Layer" {
    class MainWindow {
        - menuBar: MenuBar
        - canvas: Canvas
        - propertiesPanel: PropertiesPanel
        - componentPalette: ComponentPalette
        - workSpacePanel: JPanel
        + display(): void
        + refresh(): void
        + close(): void
    }

    class MenuBar {
        - fileMenu: JMenu
        - editMenu: JMenu
        - viewMenu: JMenu
        - helpMenu: JMenu
    }


    class Canvas {
        - zoomLevel: float
        - drawGrid(): void
        + zoomIn(): void
        + zoomOut(): void
        + clear(): void
    }

    class PropertiesPanel {
        
    }

    class ComponentPalette {
     
    }

    interface IBusinessLogic {
        + openProject(): void
        + saveProject(): void
        + closeProject(): void
        + createDiagram(String DiagramType): Diagram
     }

    MainWindow --> MenuBar
    MainWindow --> Canvas
    MainWindow --> PropertiesPanel
    MainWindow --> ComponentPalette
    MainWindow --> IBusinessLogic : interacts

    Canvas --> Diagram
    PropertiesPanel --> Component
}

@enduml

package "Business Logic Layer" {
    interface IDataLayer {
        + fetchDiagram(diagramId: String): Diagram
        + storeDiagram(diagram: Diagram): void
        + fetchComponents(diagramType: String): List<ComponentType>
    }

    class BusinessLogic implements IBusinessLogic {
        - dataLayer: IDataLayer
        + getDiagram(diagramId: String): Diagram
        + saveDiagram(diagram: Diagram): void
        + getAvailableComponents(diagramType: String): List<ComponentType>
    }

    class Project {
        - diagrams: List<Diagram>
        + addDiagram(diagram: Diagram): void
        + removeDiagram(diagram: Diagram): void
        + getDiagrams(): List<Diagram>
    }

    abstract class Diagram {
        - components: List<Component>
        + addComponent(component: Component): void
        + removeComponent(component: Component): void
        + getComponents(): List<Component>
        + renderDiagram(): void
    }

    class ClassDiagram extends Diagram {
        - classes: List<Class>
        - packages: List<Package>
        + addClass(cls: Class): void
        + removeClass(cls: Class): void
        + addPackage(pkg: Package): void
        + removePackage(pkg: Package): void
        + renderClassDiagram(): void
    }

    class UseCaseDiagram extends Diagram {
        - actors: List<Actor>
        - useCases: List<UseCase>
        + addActor(actor: Actor): void
        + removeActor(actor: Actor): void
        + addUseCase(useCase: UseCase): void
        + removeUseCase(useCase: UseCase): void
        + renderUseCaseDiagram(): void
    }

    interface Component {
        + getName(): String
        + setName(name: String): void
        + getProperties(): Object
        + setProperties(properties: Object): void
    }

    class Class implements Component {
        - name: String
        - attributes: List<String>
        - methods: List<String>
        + addAttribute(attribute: String): void
        + removeAttribute(attribute: String): void
        + addMethod(method: String): void
        + removeMethod(method: String): void
        + getAttributes(): List<String>
        + getMethods(): List<String>
    }

    class Package implements Component {
        - name: String
        - classes: List<Class>
        + addClass(cls: Class): void
        + removeClass(cls: Class): void
        + getClasses(): List<Class>
    }

    class UseCase implements Component {
        - name: String
        - actors: List<Actor>
        + addActor(actor: Actor): void
        + removeActor(actor: Actor): void
        + getActors(): List<Actor>
    }

    class Actor implements Component {
        - name: String
        + setName(name: String): void
        + getName(): String
    }

    class CodeGenerator {
        + generateClassCode(cls: Class): String
        + generatePackageCode(pkg: Package): String
        + generateUseCaseCode(useCase: UseCase): String
    }

    BusinessLogic --> IDataLayer : interacts
    BusinessLogic --> Diagram
    Diagram --> Component
    ClassDiagram --> Class
    ClassDiagram --> Package
    UseCaseDiagram --> Actor
    UseCaseDiagram --> UseCase
    CodeGenerator --> Diagram
}

package "Data Layer" {
    class DataLayer implements IDataLayer {
        + fetchDiagram(diagramId: String): Diagram
        + storeDiagram(diagram: Diagram): void
        + fetchComponents(diagramType: String): List<ComponentType>
    }

    class ProjectFileManager {
        + saveProject(project: Project): void
        + loadProject(fileName: String): Project
    }

    class DiagramFileManager {
        + saveDiagram(diagram: Diagram): void
        + loadDiagram(fileName: String): Diagram
    }

    class SerializationUtils {
        + serializeObject(obj: Object): String
        + deserializeObject(serializedData: String): Object
        + writeToFile(serializedData: String, filePath: String): void
        + readFromFile(filePath: String): String
    }

    ProjectFileManager --> DiagramFileManager
    ProjectFileManager --> SerializationUtils
    DiagramFileManager --> SerializationUtils
    ProjectFileManager --> IDataLayer : validates
    IDataLayer <.. DataLayer
}

@enduml
